--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"devDependencies": {
+		"htest.dev": "^0.0.20",
 		"jspm": "^4.2.0",
 		"prettier": "~3.5.3",
 		"prettier-plugin-brace-style": "latest",
