--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 	},
 	"scripts": {
 		"release": "release-it",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "npx htest"
 	},
 	"devDependencies": {
 		"htest.dev": "^0.0.20",
